<resources>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="tick">\u2713\u2713</string>
    <string name="wait">\u2713</string>
    <string name="turn_off_flashlight">FlashLight on</string>
    <string name="turn_on_flashlight">flashLight off</string>
    <string name="title_activity_main">QR and Barcode Scanner</string>
    <string name="message">Place a barcode inside the viewfinder rectangle to scan it.</string>
    <string name="Mark_attain">
        Mark your In time
    </string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_dra">Call List</string>
    <string name="Unit">Select Status</string>
    <string-array name="Status">
        <item>Select</item>
        <item>Hot</item>
        <item>Warm</item>
        <item>Cold</item>

    </string-array>
    <string-array name="ToWhom">
        
        <item>SE</item>
        <item>BOE</item>

    </string-array>
    <string-array name="OptionYN">
        
        <item>No</item>
        <item>Yes</item>

    </string-array>
    <string-array name="OptionSex">
        
        <item>Male</item>
        <item>Female</item>
        <item>Other</item>


    </string-array>
    <string-array name="OptionTest">
        
        <item>Door to Door</item>
        <item>Haat Bazar</item>


    </string-array>
    <string-array name="action">
        <item>Action</item>
        <item>Edit</item>
        <item>Delete</item>


    </string-array>
    <string-array name="Yes">
        <item>No</item>
        <item>Yes</item>


    </string-array>
    <string-array name="Turnover">

        <item>Lac</item>
        <item>Cr</item>


    </string-array>
    <string-array name="CallAgain">
        <item>Select</item>
        <item>No</item>
        <item>Yes</item>


    </string-array>
    <string-array name="Processed">
        <item>Select</item>
        <item>Online</item>
        <item>Physical</item>


    </string-array>
    <string-array name="Action">
        <item>Action</item>
        <item>Delete</item>
    </string-array>
    <string name="rs">\u20B9</string>
    <string-array name="cbs">
        <item>Select</item>
        <item>Dont know</item>
        <item>Being done</item>
        <item>Yes</item>

    </string-array>
    <string-array name="time">

        <item>09:00</item>
        <item>09:15</item>
        <item>09:30</item>
        <item>09:45</item>
        <item>10:00</item>
        <item>10:15</item>
        <item>10:30</item>
        <item>10:45</item>
        <item>11:00</item>
        <item>11:15</item>
        <item>11:30</item>
        <item>11:45</item>
        <item>12:00</item>
        <item>12:15</item>
        <item>12:30</item>
        <item>12:45</item>
        <item>13:00</item>
        <item>13:15</item>
        <item>13:30</item>
        <item>13:45</item>
        <item>14:00</item>
        <item>14:15</item>
        <item>14:30</item>
        <item>14:45</item>
        <item>15:00</item>
        <item>15:15</item>
        <item>15:30</item>
        <item>15:45</item>
        <item>16:00</item>
        <item>16:15</item>
        <item>16:30</item>
        <item>16:45</item>
        <item>17:00</item>
        <item>17:15</item>
        <item>17:30</item>
        <item>17:45</item>
        <item>18:00</item>
        <item>18:15</item>
        <item>18:30</item>
        <item>18:45</item>
        <item>19:00</item>
        <item>19:15</item>
        <item>19:30</item>
        <item>19:45</item>
        <item>20:00</item>
    </string-array>
    <string-array name="year">

        <item>2000</item>
        <item>2001</item>
        <item>2002</item>
        <item>2003</item>
        <item>2004</item>
        <item>2005</item>
        <item>2006</item>
        <item>2007</item>
        <item>2008</item>
        <item>2009</item>
        <item>2010</item>
        <item>2011</item>
        <item>2012</item>
        <item>2013</item>
        <item>2014</item>
        <item>2015</item>
        <item>2016</item>
        <item>2017</item>
        <item>2018</item>
        <item>2019</item>
        <item>2020</item>
        <item>2021</item>
        <item>2022</item>
        <item>2023</item>
        <item>2024</item>
        <item>2025</item>
        <item>2026</item>
        <item>2027</item>
        <item>2028</item>
        <item>2029</item>
        <item>2030</item>
        <item>2031</item>
        <item>2032</item>
        <item>2033</item>
        <item>2034</item>
        <item>2035</item>
        <item>2036</item>
        <item>2037</item>
        <item>2038</item>
        <item>2039</item>
        <item>2040</item>
    </string-array>
    <string-array name="mode">
        <item>Select..</item>
        <item>Cheque</item>
        <item>DD</item>
        <item>RTGS</item>
        <item>NEFT</item>
        <item>CASH</item>
    </string-array>
    <string name="title_activity_opportunity_update">OpportunityUpdateActivity</string>
    <string name="title_activity_enquiry_form">EnquiryFormActivity</string>
    <string name="criteria">Search Prospect</string>
    <string name="docReview">Datasheet Document Review</string>
    <string name="reports">Reports</string>
    <string name="docSendBack">Activities Sent Back by Kendra</string>
    <string name="docForward">Activities Sent Forward by Kendra</string>
    <string name="savecall">Save &amp; Start Call</string>
    <string-array name="department">
        <item>User</item>
        <item>Technical Evalution</item>
        <item>Purchase-Commercial</item>
        <item>Decision Maker</item>

    </string-array>
    <string-array name="collection">
        <item> Action </item>
        <item>Provisional Receipt</item>
        <item>Discount Voucher</item>
    </string-array>
    <string-array name="added_date">
        <item>Last Month </item>
        <item>Before</item>
        <item>After</item>
        <item>Between</item>
    </string-array>
    <string-array name="academic_Year">
        <item>2015</item>
        <item>2016</item>
        <item>2017</item>
        <item>2018</item>
        <item>2019</item>
        <item>2020</item>


    </string-array>
    <string-array name="qualification">
        <item>Graduate</item>
        <item>Under Graduate</item>
        <item>Diploma</item>
        <item>HSC</item>


    </string-array>
    <string name="title_activity_enquiry_list">ActivityEnquiryList</string>
    <string name="title_activity_actvity_enquiry_details">ActvityEnquiryDetails</string>
    <string name="title_activity_promotional_form_record">ActivityPromotionalFormRecord</string>
    <string name="title_activity_promotional_formselection">ActivityPromotionalFormselection
    </string>
    <string name="Env_code">Environment</string>
    <string name="api_getEnv">c207.ekatm.com/api/LoginAPI/GetEnvis</string>
    <string name="api_getPlants">.ekatm.com/api/LoginAPI/GetPlants</string>
    <string name="api_PostloadWorkData">.ekatm.com/api/TimesheetAPI/PostloadWorkData</string>
    <string name="api_GetUserMasterId">.ekatm.com/api/TimesheetAPI/GetUserMasterId</string>
    <string name="api_GetSessions">.ekatm.com/api/LoginAPI/GetSessions</string>
    <string name="api_GetIsValidUser">.ekatm.com/api/LoginAPI/GetIsValidUser</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="type_your_message">Type Message here</string>
    <string name="otpmsg">we are verify your mobile number</string>
    <string name="UpTicMat_Default_Setting">Default setting</string>
    <string name="UpTicMat_Change_Setting">Change warehouse and location</string>
    <string-array name="planets_array">
        <item>Mercury</item>
        <item>Venus</item>
        <item>Earth</item>
        <item>Mars</item>
        <item>Jupiter</item>
        <item>Saturn</item>
        <item>Uranus</item>
        <item>Neptune</item>
    </string-array>
    <string-array name="time_array">
        <item>09:00</item>
        <item>09:15</item>
        <item>09:30</item>
        <item>09:45</item>
        <item>10:00</item>
        <item>10:15</item>
        <item>10:30</item>
        <item>10:45</item>
        <item>11:00</item>
        <item>11:15</item>
        <item>11:30</item>
        <item>11:45</item>
        <item>12:00</item>
        <item>12:15</item>
        <item>12:30</item>
        <item>12:45</item>
        <item>13:00</item>
        <item>13:15</item>
        <item>13:30</item>
        <item>13:45</item>
        <item>14:00</item>
        <item>14:15</item>
        <item>14:30</item>
        <item>14:45</item>
        <item>15:00</item>
        <item>15:15</item>
        <item>15:30</item>
        <item>15:45</item>
        <item>16:00</item>
        <item>16:15</item>
        <item>16:30</item>
        <item>16:45</item>
        <item>17:00</item>
        <item>17:15</item>
        <item>17:30</item>
        <item>17:45</item>
        <item>18:00</item>
        <item>18:15</item>
        <item>18:30</item>
        <item>18:45</item>
        <item>19:00</item>
        <item>19:15</item>
        <item>19:30</item>
        <item>19:45</item>
        <item>20:00</item>
    </string-array>
    <string name="google_map_key">AIzaSyD3ONS8gu5RY-Db5shmfI1Fc4NyygBGHSk</string>
    <string name="claim_records">Claim Records</string>
    <string name="claim">Claim</string>
    <string name="paid">Paid</string>
    <string name="location">Location</string>
    <string name="copy">Copy</string>
    <string name="AssginWork">Assign Work</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="app_name_toolbar_service">Service Desk</string>
    <string name="ButtonFont">sans-serif-dark</string>
    <string name="TextFont">sans-serif-light</string>
    <string name="amt">Amount</string>
    <string name="merchname">Merchant name</string>
    <string name="acpt">Accepted</string>
    <string name="ordno">Order No.</string>
    <string name="status">Status</string>
    <string name="partpckgd">Partially Packaged </string>
    <string name="sorry_no_ord_aval">Sorry! No orders available </string>
    <string name="addt">Added Date</string>
    <string name="expdldt">Exp. Del. Date</string>
    <string name="consignee">Consignee</string>
    <string name="showmore">Show more  </string>
    <string name="text1">• Ekatm CRM Call log will record your outgoing and incoming phone calls. It captures contact number,time and duration of the call.</string>
    <string name="text2">• Call log is stored locally on your phone only. Call information is sent to server only when you link number with prospect or customer. So, your call information is absolutely private to you.</string>
    <string name="text3">• In Ekatm app you will see icon</string>
    <string name="text4">• This will be visible only if there is call not updated in CRM or service desk.</string>
    <string name="text5">• You will see your phone call record.</string>
    <string name="text6">• The phone number will be checked in Ekatm. If this number exists in prospect or customer contact list then name of prospect or customer will be displayed.</string>
    <string name="text7">• You click on the number. You will get options to</string>
    <string name="text8">o	Link to opportunity</string>
    <string name="text9">o	Link to Collection</string>
    <string name="text10">o	Link to Ticket</string>
    <string name="text11">o	Create new opportunity</string>
    <string name="text12">o	Mark as personal</string>
    <string name="text13">o	Mark as Colleague</string>
    <string name="text14">o	Mark as Spam</string>
</resources>