<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:card_view="http://schemas.android.com/apk/res-auto">
    <include
        layout="@layout/toolbar_header"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible"
        android:layout_marginLeft="2dp"
        android:layout_marginRight="2dp"
        android:orientation="vertical">

        <android.support.v7.widget.CardView
            android:id="@+id/card_viewdetails"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            card_view:cardCornerRadius="8dp"
            card_view:cardElevation="1dp"
            card_view:cardMaxElevation="1dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="visible"
                android:layout_margin="2dp"
                android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text1"
                android:padding="2dp"
                android:layout_marginTop="@dimen/sp_5"
                android:textSize="@dimen/sp_14"
                android:textColor="@color/black"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text2"
                android:padding="2dp"
                android:textSize="@dimen/sp_14"
                android:textColor="@color/black"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/text3"
                    android:padding="2dp"
                    android:textSize="@dimen/sp_14"
                    android:textColor="@color/black"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/text4"
                    android:padding="2dp"
                    android:textSize="@dimen/sp_14"
                    android:textColor="@color/black"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/text5"
                    android:padding="2dp"
                    android:textSize="@dimen/sp_14"
                    android:textColor="@color/black"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/text6"
                    android:padding="2dp"
                    android:textSize="@dimen/sp_14"
                    android:textColor="@color/black"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/text7"
                    android:padding="2dp"
                    android:textSize="@dimen/sp_14"
                    android:textColor="@color/black"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/text8"
                    android:padding="2dp"
                    android:layout_marginLeft="20dp"
                    android:textSize="@dimen/sp_14"
                    android:textColor="@color/black"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/text9"
                    android:padding="2dp"
                    android:textSize="@dimen/sp_14"
                    android:layout_marginLeft="20dp"
                    android:textColor="@color/black"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/text10"
                    android:padding="2dp"
                    android:layout_marginLeft="20dp"
                    android:textSize="@dimen/sp_14"
                    android:textColor="@color/black"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/text11"
                    android:padding="2dp"
                    android:layout_marginLeft="20dp"
                    android:textSize="@dimen/sp_14"
                    android:textColor="@color/black"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/text12"
                    android:layout_marginLeft="20dp"
                    android:padding="2dp"
                    android:textSize="@dimen/sp_14"
                    android:textColor="@color/black"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/text13"
                    android:padding="2dp"
                    android:textSize="@dimen/sp_14"
                    android:layout_marginLeft="20dp"
                    android:textColor="@color/black"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/text14"
                    android:padding="2dp"
                    android:layout_marginLeft="20dp"
                    android:textSize="@dimen/sp_14"
                    android:textColor="@color/black"/>
                <Button
                    android:id="@+id/btn_install"
                    android:layout_width="150dp"
                    android:layout_height="30dp"
                    android:textColor="@color/white"
                    android:layout_marginBottom="@dimen/sp_5"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="Install"
                    android:textSize="16dp"
                    android:background="@drawable/button_orange"
                    android:textStyle="bold"
                    android:textAllCaps="false"
                    />
            </LinearLayout>
        </android.support.v7.widget.CardView>
    </LinearLayout>
</LinearLayout>